--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Page Styler</title>
 		<link rel="stylesheet" href="style.css">
+		
 	</head>
 	<body>
 		<ul id="switcher">
@@ -11,9 +12,15 @@
 			<li class="normal">A</li>
 			<li class="bigger">A+</li>
 		</ul>
-
+	<br/>
+		<ul id="color">
+			<li class="red">a</li>
+			<li class="green">b</li>
+			<li class="blue">c</li>
+		</ul>
 		<h1>Page Styler</h1>
 
 		<p>Click the buttons above to change the page styles!</p>
+		<script src="script.js"></script>
 	</body>
 </html>
